Last commit before code gen.